fx viewholder to less code

--- a/HomeWork_1/app/src/main/res/layout/contact_layout.xml
+++ b/HomeWork_1/app/src/main/res/layout/contact_layout.xml
@@ -8,14 +8,14 @@
 
 
     <TextView
-        android:id="@+id/contact_name"
+        android:id="@+id/contactName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25dp"
         android:layout_marginTop="30dp"
         android:textColor="@android:color/background_dark"
         android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/contact_number"
+        app:layout_constraintBottom_toTopOf="@+id/contactNumber"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +24,7 @@
         />
 
     <TextView
-        android:id="@+id/contact_number"
+        android:id="@+id/contactNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -34,6 +34,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contact_name"
+        app:layout_constraintTop_toBottomOf="@+id/contactName"
         tools:text="8-800-555-35-35" />
 </androidx.constraintlayout.widget.ConstraintLayout>
