--- a/app/src/main/res/drawable/post_share_button_icon.xml
+++ b/app/src/main/res/drawable/post_share_button_icon.xml
@@ -1,9 +1,9 @@
-<vector
-    android:height="42dp"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="42dp"
-    android:viewportHeight="24"
+    android:height="42dp"
     android:viewportWidth="24"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="?attr/colorAccent"
-        android:pathData="m12.1 7.87v-3.47a1.32 1.32 0 0 1 2.17-1l8.94 7.6a1.32 1.32 0 0 1 0.15 1.86l-0.15 0.15-8.94 7.6a1.32 1.32 0 0 1 -2.17-1v-3.45c-4.68 0.11-8 1.09-9.89 2.87a1.15 1.15 0 0 1 -1.9-1.11c1.53-6.36 5.51-9.76 11.79-10.05zm1.8-2.42v4.2h-0.9c-5.3 0-8.72 2.25-10.39 6.86 2.45-1.45 5.92-2.16 10.39-2.16h0.9v4.2l7.71-6.55z"/>
+    android:viewportHeight="24">
+    <path
+        android:fillColor="?attr/colorAccent"
+        android:pathData="m12.1 7.87v-3.47a1.32 1.32 0 0 1 2.17-1l8.94 7.6a1.32 1.32 0 0 1 0.15 1.86l-0.15 0.15-8.94 7.6a1.32 1.32 0 0 1 -2.17-1v-3.45c-4.68 0.11-8 1.09-9.89 2.87a1.15 1.15 0 0 1 -1.9-1.11c1.53-6.36 5.51-9.76 11.79-10.05zm1.8-2.42v4.2h-0.9c-5.3 0-8.72 2.25-10.39 6.86 2.45-1.45 5.92-2.16 10.39-2.16h0.9v4.2l7.71-6.55z" />
 </vector>
