--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".MainActivity">
-    <LinearLayout
-        android:id="@+id/linearLayoutView"
+    android:layout_height="wrap_content">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <ru.krivonosovdenis.fintechapp.customViews.SocNetworkPostLayout
-            android:id="@+id/item1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <ru.krivonosovdenis.fintechapp.customViews.SocNetworkPostLayout
-            android:id="@+id/item2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <include layout="@layout/sample_flexbox" />
-    </LinearLayout>
-</ScrollView>
+        tools:context=".MainActivity" />
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
