--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryLT">#4a86cc</color>
     <color name="colorOnPrimaryLT">#ffffff</color>
     <color name="colorPrimaryDarkLT">#3700B3</color>
-    <color name="colorBackgroundLT">#ffffff</color>
+    <color name="colorBackgroundLT">#dddddd</color>
+    <color name="colorCardBackgroundLT">#ffffff</color>
     <color name="colorAccentLT">#adb6be</color>
     <color name="titleTextColorLT">#343434</color>
     <color name="subtitleTextColorLT">#8d9194</color>
@@ -14,7 +15,8 @@
     <color name="colorPrimaryDT">#191919</color>
     <color name="colorOnPrimaryDT">#ffffff</color>
     <color name="colorPrimaryDarkDT">#000000</color>
-    <color name="colorBackgroundDT">#191919</color>
+    <color name="colorBackgroundDT">#000000</color>
+    <color name="colorCardBackgroundDT">#191919</color>
     <color name="colorAccentDT">#adb6be</color>
     <color name="titleTextColorDT">#cecfd1</color>
     <color name="subtitleTextColorDT">#7b7b7b</color>
