доделываем предыдущую домашку. Исправлены замечанию и добавлен разделитель по датам. Разделитель реализован простой текстовой вьюхой. Потом, на этапе доработки UI, можно добавить кастомную вьюху в дивайдер

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,5 +9,6 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".MainActivity" />
+        tools:context=".MainActivity"
+        tools:listitem="@layout/post_with_photo_wrapper"/>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
