--- a/app/src/main/res/layout/soc_network_post_with_photo.xml
+++ b/app/src/main/res/layout/soc_network_post_with_photo.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:background="?attr/cardBackgroundColor"
     android:padding="10dp"
-    tools:parentTag="ru.krivonosovdenis.fintechapp.customviews.SocNetworkPostWithPhotoLayout">
+    tools:parentTag="ru.krivonosovdenis.fintechapp.customviews.SocNetworkPostWithPhoto">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/posterAvatar"
