--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/actionAllPosts"
-        android:title="@string/bottom_nav_news"
-        android:icon="@drawable/bottom_nav_news_icon" />
-    <item android:id="@+id/actionLikedPosts"
-        android:title="@string/bottom_nav_news_liked"
-        android:icon="@drawable/bottom_nav_news_liked" />
+    <item
+        android:id="@+id/actionAllPosts"
+        android:icon="@drawable/bottom_nav_news_icon"
+        android:title="@string/bottom_nav_news" />
+    <item
+        android:id="@+id/actionLikedPosts"
+        android:icon="@drawable/bottom_nav_news_liked"
+        android:title="@string/bottom_nav_news_liked" />
 </menu>
