--- a/app/src/main/res/layout/fragment_all_posts.xml
+++ b/app/src/main/res/layout/fragment_all_posts.xml
@@ -10,17 +10,17 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".presentation.mainactivity.MainActivity">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/allPostsRecyclerView"
+            android:id="@+id/allPostsView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:context=".MainActivity"
+            tools:context=".presentation.mainactivity.MainActivity"
             tools:listitem="@layout/post_with_photo_wrapper" />
 
         <LinearLayout
