reserving before global rework

--- a/app/src/main/res/layout/fragment_all_posts.xml
+++ b/app/src/main/res/layout/fragment_all_posts.xml
@@ -32,27 +32,27 @@
             android:visibility="gone">
 
             <include
-                layout="@layout/soc_network_post_loading"
+                layout="@layout/post_loading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <include
-                layout="@layout/soc_network_post_loading"
+                layout="@layout/post_loading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <include
-                layout="@layout/soc_network_post_loading"
+                layout="@layout/post_loading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <include
-                layout="@layout/soc_network_post_loading"
+                layout="@layout/post_loading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <include
-                layout="@layout/soc_network_post_loading"
+                layout="@layout/post_loading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
