--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,4 +8,8 @@
         android:id="@+id/actionLikedPosts"
         android:icon="@drawable/bottom_nav_news_liked"
         android:title="@string/bottom_nav_news_liked" />
+    <item
+        android:id="@+id/actionUserProfile"
+        android:icon="@drawable/bottom_nav_profile_icon"
+        android:title="@string/bottom_nav_profile_tab" />
 </menu>
