final work reserv2

--- a/app/src/main/res/layout/fragment_init_loading.xml
+++ b/app/src/main/res/layout/fragment_init_loading.xml
@@ -11,20 +11,22 @@
         android:src="@drawable/init_loading_image"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.57" />
 
     <TextView
         android:id="@+id/errorText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:textStyle="bold"
         android:maxWidth="250dp"
         android:text="@string/init_loading_text"
         android:textSize="25sp"
