--- a/app/src/main/res/layout/fragment_liked_posts.xml
+++ b/app/src/main/res/layout/fragment_liked_posts.xml
@@ -12,6 +12,51 @@
         tools:context=".presentation.mainactivity.MainActivity"
         tools:listitem="@layout/post_with_photo_wrapper" />
 
+    <ScrollView
+        android:id="@+id/zeroSavedPostsView"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:visibility="visible">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/cardBackgroundColor"
+>
+            <TextView
+                android:id="@+id/errorText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:maxWidth="250dp"
+                android:text="@string/saved_nothing_text"
+                android:textSize="27sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/guideline1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.27" />
+
+            <ImageView
+                android:id="@+id/lazyimage"
+                android:layout_width="350dp"
+                android:layout_height="350dp"
+                android:contentDescription="@string/saved_nothing_image_desc"
+                android:src="@drawable/saved_nothing"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/guideline1" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/errorView"
         android:layout_width="match_parent"
@@ -24,19 +69,19 @@
             android:layout_height="wrap_content"
             android:text="@string/db_error_text"
             android:textSize="70sp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline"
+            app:layout_constraintBottom_toTopOf="@+id/guideline2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
+            android:id="@+id/guideline2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.5" />
 
         <TextView
-            android:id="@+id/errorText"
+            android:id="@+id/errorText2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxWidth="250dp"
